--- a/style.css
+++ b/style.css
@@ -1,487 +1,560 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 
 .main{
-    width: 100%;
-    background-color: #1B0B03;
-    background-position: center;
-    background-size: cover;
-    height: 100%;
+  width: 100%;
+  background-color: #1B0B03;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
 }
 
 .navbar {
-  width: 100%; 
-  height: 75px;
-  background-image: linear-gradient(to bottom right, #1E1E1E, #0B0A11);
+width: 100%; 
+height: 75px;
+background-image: linear-gradient(to bottom right, #1E1E1E, #0B0A11);
 }
 
 
 .icon{
-    width: 200px;
-    float: left;
-    height: 70px;
+  width: 200px;
+  float: left;
+  height: 70px;
 }
 
 .logo{
-    color: #ff7200;
-    font-size: 35px;
-    font-family: 'Poppins';
-    padding-left: 20px;
-    float: left;
-    padding-top: 10px;
-    margin-top: 5px
+  color: #ff7200;
+  font-size: 35px;
+  font-family: 'Poppins';
+  padding-left: 20px;
+  float: left;
+  padding-top: 10px;
+  margin-top: 5px
 }
 
 .menu{
-    width: 400px;
-    float: left;
-    height: 70px;
+  width: 400px;
+  float: left;
+  height: 70px;
 }
 
 ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Poppins';
-    color: #FFFFFF;
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins';
+  color: #FFFFFF;
 }
 
 ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 27px;
-    font-size: 14px;
-    font-family: 'Poppins';
-    color: #FFFFFF;
+  list-style: none;
+  margin-left: 62px;
+  margin-top: 27px;
+  font-size: 14px;
+  font-family: 'Poppins';
+  color: #FFFFFF;
 }
 
 ul li a{
-    text-decoration: none;
-    color: #fff;
-    font-family: "Poppins" ;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-    font-family: 'Poppins';
-    color: #FFFFFF;
+  text-decoration: none;
+  color: #fff;
+  font-family: "Poppins" ;
+  font-weight: bold;
+  transition: 0.4s ease-in-out;
+  font-family: 'Poppins';
+  color: #FFFFFF;
 }
 
 ul li a:hover{
-    color: #ff7200;
+  color: #ff7200;
 }
 
 .search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
+  width: 330px;
+  float: left;
+  margin-left: 270px;
 }
 
 .srch{
-    font-family: 'Poppins';
-    width: 200px;
-    height: 40px;
-    background: transparent;
-    border: 1px solid #838186;
-    margin-top: 13px;
-    color: #fff;
-    border-right: none;
-    font-size: 16px;
-    float: left;
-    padding: 10px;
-    border-bottom-left-radius: 5px;
-    border-top-left-radius: 5px;
+  font-family: 'Poppins';
+  width: 200px;
+  height: 40px;
+  background: transparent;
+  border: 1px solid #838186;
+  margin-top: 13px;
+  color: #fff;
+  border-right: none;
+  font-size: 16px;
+  float: left;
+  padding: 10px;
+  border-bottom-left-radius: 5px;
+  border-top-left-radius: 5px;
 }
 
 .btn{
-    width: 100px;
-    height: 40px;
-    background: #0C0A1C;
-    border: 2px solid #838186;
-    margin-top: 13px;
-    color: #fff;
-    font-size: 15px;
-    border-bottom-right-radius: 5px;
-    border-bottom-right-radius: 5px;
-    transition: 0.2s ease;
-    cursor: pointer;
-    
-    
+  width: 100px;
+  height: 40px;
+  background: #0C0A1C;
+  border: 2px solid #838186;
+  margin-top: 13px;
+  color: #fff;
+  font-size: 15px;
+  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  transition: 0.2s ease;
+  cursor: pointer;
+  
+  
 }
 .btn:hover{
-    color: #ff7200;
+  color: #ff7200;
 }
 
 .btn:focus{
-    outline: none;
+  outline: none;
 }
 
 .srch:focus{
-    outline: none;
+  outline: none;
 }
 
 .hero-section {
-  position: relative;
-  width: 100vw; 
-  height: 100vh; 
-  overflow: hidden;
+position: relative;
+width: 100vw; 
+height: 100vh; 
+overflow: hidden;
 }
 
 .hero-section img {
-  width: 100vw; 
-  height: 100vh; 
-  object-fit: cover; 
+width: 100vw; 
+height: 100vh; 
+object-fit: cover; 
 }
 
 
 .hero-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #0B0A11; /* Adjust text color as needed */
-  /* Add other styling properties for your hero content */
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+color: #0B0A11; /* Adjust text color as needed */
+/* Add other styling properties for your hero content */
 }
 
 
 
 .content{
-    width: 100%;
-    height: auto;
-    margin: auto;
-    color: #fff;
-    position: relative;
-    font-size: 23px;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  color: #fff;
+  position: relative;
+  font-size: 20px;
 }
 
 .content .par{
-    padding-left: 20px;
-    padding-bottom: 25px;
-    font-family: Arial;
-    letter-spacing: 1.2px;
-    line-height: 30px;
-    text-align: center;
+  padding-left: 20px;
+  padding-bottom: 0px;
+  font-size: 16px;
+  font-family: Arial;
+  letter-spacing: 1.0px;
+  line-height: 20px;
+  text-align: center;
 }
 
 .content h1{
-    font-family: 'Poppins';
-    font-weight:900;
-    font-size: 180px;
-    padding-left: 20px;
-    margin-top: 9%;
-    letter-spacing: 2px;
-    text-align: center;
-}
-
-.content .cn a{
-    text-decoration: none;
-    color: #000;
-    transition: .3s ease;
-}
-
-.cn:hover{
-    background-color: #fff;
-}
-
-.content span{
-    color: #ff7200;
-    font-size: 65px
-}
-
-.container {
-  padding: 2rem;
-  background-color: #0C0A1C;
-  border-radius: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  max-width: 80%; /* Set to 50% for approximately half the size of the webpage */
-  margin: 0 auto; /* Add auto margin to center horizontally */
-}
-
-.container2 {
-  width: 60%; /* Set the desired width for the container */
-  margin: 20px 0; /* Center the container and add some top margin */
-  background-color: #0B0A11;
-  padding: 2rem;
+  font-family: 'Poppins';
+  font-weight:bolder;
+  font-size: 110px;
+  padding-left: 20px;
+  margin-top: 0%;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #ff7200;
   
 }
 
+.content .cn a{
+  text-decoration: none;
+  color: #000;
+  transition: .3s ease;
+}
+
+.cn:hover{
+  background-color: #fff;
+}
+
+.content span{
+  color: #ff7200;
+  font-size: 65px
+}
+
+.container {
+padding: 2rem;
+background-color: #0C0A1C;
+border-radius: 1rem;
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+max-width: 80%; /* Set to 50% for approximately half the size of the webpage */
+margin: 0 auto; /* Add auto margin to center horizontally */
+}
+
+.container2 {
+width: 70%; /* Set the desired width for the container */
+margin: 20px 0; /* Center the container and add some top margin */
+background-color: #0C0A1C;
+padding: 2rem;
+}
+
+
 .nav-links {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start; /* Align to the left */
-    background: #1B0B03;
-    padding: 10px; /* Adjusted padding */
-    border-radius: 12px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    width: 60%; /* Make it 100% width of the container */
-    margin: 0;
+  align-items: flex-start;
+  justify-content: flex-start; /* Align to the left */
+  background: #1B0B03;
+  padding: 10px; /* Adjusted padding */
+  border-radius: 12px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  width: 60%; /* Make it 100% width of the container */
+  margin: 0;
 }
 
 .nav-links li {
-  list-style: none;
-  margin: 0 8px;
+list-style: none;
+margin: 0 8px;
 }
 
 .nav-links li a {
-  position: relative;
-  color: #E0DFE9;
-  font-size: 26px; /* Adjusted font size */
-  font-weight: 500;
-  padding: 6px 0;
-  text-decoration: none;
+position: relative;
+color: #E0DFE9;
+font-size: 26px; /* Adjusted font size */
+font-weight: 500;
+padding: 6px 0;
+text-decoration: none;
 }
 
 .nav-links li a:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0%;
-  background: #E0DFE9;
-  border-radius: 12px;
-  transition: all 0.4s ease;
+content: '';
+position: absolute;
+bottom: 0;
+left: 0;
+height: 3px;
+width: 0%;
+background: #E0DFE9;
+border-radius: 12px;
+transition: all 0.4s ease;
 }
 
 .nav-links li a:hover:before {
-  width: 100%;
+width: 100%;
 }
 
 .nav-links li.center a:before {
-  left: 50%;
-  transform: translateX(-50%);
+left: 50%;
+transform: translateX(-50%);
 }
 
 .nav-links li.upward a:before {
-  width: 100%;
-  bottom: -5px;
-  opacity: 0;
+width: 100%;
+bottom: -5px;
+opacity: 0;
 }
 
 .nav-links li.upward a:hover:before {
-  bottom: 0px;
-  opacity: 1;
+bottom: 0px;
+opacity: 1;
 }
 
 .nav-links li.forward a:before {
-  width: 100%;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.4s ease;
+width: 100%;
+transform: scaleX(0);
+transform-origin: right;
+transition: transform 0.4s ease;
 }
 
 .nav-links li.forward a:hover:before {
-  transform: scaleX(1);
-  transform-origin: left;
+transform: scaleX(1);
+transform-origin: left;
 }
 
 .nav-links li a:before{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 3px;
-  width: 0%;
-  background: #ff7200;
-  border-radius: 12px;
-  transition: all 0.4s ease;
+content: '';
+position: absolute;
+bottom: 0;
+left: 0;
+height: 3px;
+width: 0%;
+background: #ff7200;
+border-radius: 12px;
+transition: all 0.4s ease;
 }
 .nav-links li a:hover:before{
-  width: 100%;
+width: 100%;
 }
 .nav-links li.center a:before{
-  left: 50%;
-  transform: translateX(-50%);
+left: 50%;
+transform: translateX(-50%);
 }
 .nav-links li.upward a:before{
-  width: 100%;
-  bottom: -5px;
-  opacity: 0;
+width: 100%;
+bottom: -5px;
+opacity: 0;
 }
 .nav-links li.upward a:hover:before{
-  bottom: 0px;
-  opacity: 1;
+bottom: 0px;
+opacity: 1;
 }
 .nav-links li.forward a:before{
-  width: 100%;
-  transform: scaleX(0);
-  transform-origin: right;
-  transition: transform 0.4s ease;
+width: 100%;
+transform: scaleX(0);
+transform-origin: right;
+transition: transform 0.4s ease;
 }
 .nav-links li.forward a:hover:before{
-  transform: scaleX(1);
-  transform-origin: left;
+transform: scaleX(1);
+transform-origin: left;
 }
 
+
 h3 {
-  font-family: 'Poppins';
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: 3%;
-  letter-spacing: 2px;
-  text-align: center;
-  color: #E0DFE9; /* Add your desired color */
+font-family: 'Poppins';
+font-size: 25px;
+font-weight: bold;
+margin-top: 10%;
+letter-spacing: 2px;
+text-align: left;
+color: #E0DFE9; 
 }
 
 h4 {
-  font-family: 'Poppins';
-  font-size: 18px;
-  margin-top: 1%;
-  font-weight: lighter;
-  letter-spacing: 2px;
-  color: #E0DFE9; /* Add your desired color */
+font-family: 'Poppins';
+font-size: 18px;
+margin-top: 1%;
+font-weight: lighter;
+letter-spacing: 2px;
+color: #E0DFE9; /* Add your desired color */
 }
 
 
 .dropdown {
-  position: relative;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  font-size: 14px; /* Adjusted font size */
-  line-height: 2;
-  height: 40px; /* Adjusted height */
-  transition: all 200ms linear;
-  border-radius: 4px;
-  width: 200px; /* Adjusted width */
-  letter-spacing: 1px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border: none;
-  background-color: #E0DFE9;
-  cursor: pointer;
-  color: #102770;
-  box-shadow: 0 8px 16px 0 rgba(255, 235, 167, 0.15);
-  margin-right: 20px;
-  margin-bottom: 20px;
+position: relative;
+font-family: 'Roboto', sans-serif;
+font-weight: 500;
+font-size: 14px; /* Adjusted font size */
+line-height: 2;
+height: 40px; /* Adjusted height */
+transition: all 200ms linear;
+border-radius: 4px;
+width: 200px; /* Adjusted width */
+letter-spacing: 1px;
+display: inline-flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+border: none;
+background-color: #E0DFE9;
+cursor: pointer;
+color: #102770;
+box-shadow: 0 8px 16px 0 rgba(255, 235, 167, 0.15);
+margin-right: 20px;
+margin-bottom: 20px;
 }
 
 .dropbtn {
-  position: relative;
-  left: 0;
-   
+position: relative;
+left: 0;
+ 
 }
 
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #E0DFE9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-  
+display: none;
+position: absolute;
+background-color: #E0DFE9;
+min-width: 160px;
+box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+z-index: 1;
+
 }
 
 .dropdown-content a {
-  color: #0C0A1C;
-  padding: 10px 12px; /* Adjusted padding */
-  text-decoration: none;
-  display: block;
-  
+color: #0C0A1C;
+padding: 10px 12px; /* Adjusted padding */
+text-decoration: none;
+display: block;
+
 }
 
 .dropdown-content a:hover {
-  background-color: #ff7200;
+background-color: #ff7200;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+display: block;
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+background-color: #3e8e41;
 }
 
 
 .form h2{
-    width: 220px;
-    font-family: sans-serif;
-    text-align: center;
-    color: #ff7200;
-    font-size: 22px;
-    background-color: #fff;
-    border-radius: 10px;
-    margin: 2px;
-    padding: 8px;
+  width: 220px;
+  font-family: sans-serif;
+  text-align: center;
+  color: #ff7200;
+  font-size: 22px;
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 2px;
+  padding: 8px;
 }
 
 .form input{
-    width: 240px;
-    height: 35px;
-    background: transparent;
-    border-bottom: 1px solid #ff7200;
-    border-top: none;
-    border-right: none;
-    border-left: none;
-    color: #fff;
-    font-size: 15px;
-    letter-spacing: 1px;
-    margin-top: 30px;
-    font-family: sans-serif;
+  width: 240px;
+  height: 35px;
+  background: transparent;
+  border-bottom: 1px solid #ff7200;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  color: #fff;
+  font-size: 15px;
+  letter-spacing: 1px;
+  margin-top: 30px;
+  font-family: sans-serif;
 }
 
 .form input:focus{
-    outline: none;
+  outline: none;
 }
 
 ::placeholder{
-    color: #fff;
-    font-family: Arial;
+  color: #fff;
+  font-family: Arial;
 }
 
 .btnn{
-    width: 240px;
-    height: 40px;
-    background: #ff7200;
-    border: none;
-    margin-top: 30px;
-    font-size: 18px;
-    border-radius: 10px;
-    cursor: pointer;
-    color: #fff;
-    transition: 0.4s ease;
+  width: 240px;
+  height: 40px;
+  background: #ff7200;
+  border: none;
+  margin-top: 30px;
+  font-size: 18px;
+  border-radius: 10px;
+  cursor: pointer;
+  color: #fff;
+  transition: 0.4s ease;
 }
 .btnn:hover{
-    background: #fff;
-    color: #ff7200;
+  background: #fff;
+  color: #ff7200;
 }
 .btnn a{
-    text-decoration: none;
-    color: #000;
-    font-weight: bold;
+  text-decoration: none;
+  color: #000;
+  font-weight: bold;
 }
 .form .link{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    padding-top: 20px;
-    text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  padding-top: 20px;
+  text-align: center;
 }
 .form .link a{
-    text-decoration: none;
-    color: #ff7200;
+  text-decoration: none;
+  color: #ff7200;
 }
 .liw{
-    padding-top: 15px;
-    padding-bottom: 10px;
-    text-align: center;
+  padding-top: 15px;
+  padding-bottom: 10px;
+  text-align: center;
 }
 .icons a{
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 .icons ion-icon{
-    color: #fff;
-    font-size: 30px;
-    padding-left: 14px;
-    padding-top: 5px;
-    transition: 0.3s ease;
+  color: #fff;
+  font-size: 30px;
+  padding-left: 14px;
+  padding-top: 5px;
+  transition: 0.3s ease;
 }
 .icons ion-icon:hover{
-    color: #ff7200;
+  color: #ff7200;
+}
+body {
+font-family: 'Poppins', sans-serif;
+margin: 0;
+padding: 0;
+background-color: #0C0A1C; /* Set background color for the entire page */
+color: #ffffff; /* Set text color for the entire page */
+}
+
+.header-container {
+background-color: #1B0B03;
+color: #ffffff;
+padding: 0px;
+}
+
+h1 {
+font-size: 24px;
+margin-bottom: 5px;
+}
+
+h1:nth-child(2) {
+text-align: left;
+font-weight: bold;
+position: relative;
+}
+
+p {
+font-size: 16px;
+line-height: 1.5; /* Adjusted line height */
+margin-bottom: 20px;
+}
+
+p:nth-child(2),
+p:nth-child(3),
+p:nth-child(4) {
+text-align: left;
+}
+
+a {
+color: #007bff;
+text-decoration: none;
+}
+
+a:hover {
+text-decoration: underline;
+}
+
+  
+.title-contributor {
+  width: 100%;
+  height: auto;
+  margin: auto;
+  text-align: center;
+}
+
+.title-contributor img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
