--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ ul li a:hover{
 
 .hero-section {
 position: relative;
-width: 100vw; 
+width: 100%; 
 height: 100vh; 
 overflow: hidden;
 }
@@ -210,6 +210,20 @@ width: 70%; /* Set the desired width for the container */
 margin: 20px 0; /* Center the container and add some top margin */
 background-color: #0C0A1C;
 padding: 2rem;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.calculator {
+  border: 1px solid red;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.resistor {
+  width: 300px;
 }
 
 
@@ -220,7 +234,7 @@ padding: 2rem;
   padding: 10px; /* Adjusted padding */
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  width: 60%; /* Make it 100% width of the container */
+  width: 100%; /* Make it 100% width of the container */
   margin: 0;
 }
 
@@ -499,7 +513,8 @@ color: #ffffff; /* Set text color for the entire page */
 .header-container {
 background-color: #1B0B03;
 color: #ffffff;
-padding: 0px;
+padding: 0px 10px;
+width: 100%;
 }
 
 h1 {
