--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav {
   justify-content: space-between;
 }
 
+
 .icon{
   float: left;
   height: 70px;
@@ -145,18 +146,14 @@ ul li a:hover{
 }
 
 .hero-section {
-position: relative;
 width: 100%; 
-height: 100vh;
-background-image: url("/static/images/ASSET_HOMEPAGE.png");
-background-size: cover;
+height: 100svh;
 }
 
-/* .hero-section img {
+.hero-section img {
 width: 100%; 
-height: 100vh; 
-object-fit: cover; 
-} */
+height: 100%; 
+}
 
 /* .hero-content {
 position: absolute;
@@ -262,7 +259,6 @@ border: 1px solid red;
 }
 
 .nav-links {
-  padding-top: 10px;
   align-items: center;
   justify-content: space-between;
 }
@@ -271,17 +267,15 @@ border: 1px solid red;
 list-style: none;
 }
 
-.nav-links li button {
+.nav-links li a {
 position: relative;
-color: #FDFDFD;
-background: none;
+color: #E0DFE9;
 font-size: 22px;
 font-weight: 500;
-border: none;
 text-decoration: none;
 }
 
-.nav-links li button:before {
+.nav-links li a:before {
 content: '';
 position: absolute;
 bottom: 0;
@@ -293,39 +287,39 @@ border-radius: 12px;
 transition: all 0.4s ease;
 }
 
-.nav-links li button:hover:before {
+.nav-links li a:hover:before {
 width: 100%;
 }
 
-.nav-links li.center button:before {
+.nav-links li.center a:before {
 left: 50%;
 transform: translateX(-50%);
 }
 
-.nav-links li.upward button:before {
+.nav-links li.upward a:before {
 width: 100%;
 bottom: -5px;
 opacity: 0;
 }
 
-.nav-links li.upward button:hover:before {
+.nav-links li.upward a:hover:before {
 bottom: 0px;
 opacity: 1;
 }
 
-.nav-links li.forward button:before {
+.nav-links li.forward a:before {
 width: 100%;
 transform: scaleX(0);
 transform-origin: right;
 transition: transform 0.4s ease;
 }
 
-.nav-links li.forward button:hover:before {
+.nav-links li.forward a:hover:before {
 transform: scaleX(1);
 transform-origin: left;
 }
 
-.nav-links li button:before{
+.nav-links li a:before{
 content: '';
 position: absolute;
 bottom: 0;
@@ -336,38 +330,37 @@ background: #ff7200;
 border-radius: 12px;
 transition: all 0.4s ease;
 }
-.nav-links li button:hover:before{
+.nav-links li a:hover:before{
 width: 100%;
 }
-.nav-links li.center button:before{
+.nav-links li.center a:before{
 left: 50%;
 transform: translateX(-50%);
 }
-.nav-links li.upward button:before{
+.nav-links li.upward a:before{
 width: 100%;
 bottom: -5px;
 opacity: 0;
 }
-.nav-links li.upward button:hover:before{
+.nav-links li.upward a:hover:before{
 bottom: 0px;
 opacity: 1;
 }
-.nav-links li.forward button:before{
+.nav-links li.forward a:before{
 width: 100%;
 transform: scaleX(0);
 transform-origin: right;
 transition: transform 0.4s ease;
 }
-.nav-links li.forward button:hover:before{
+.nav-links li.forward a:hover:before{
 transform: scaleX(1);
 transform-origin: left;
 }
 
 /* =========================== temporary */
-.rv_result{
-  padding: 0 0 30px 0;
-}
+.rv_result {
 
+}
 /* =========================== */
 
 .sub_container {
@@ -392,37 +385,8 @@ color: #E0DFE9;
 padding: 10px 0;
 }
 
-.dropdown-content {
-  font-family: 'Poppins', sans-serif;
-  text-transform: uppercase;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 10px;
-  width: 250px;
-  background: #fff url("select-arrows.svg") no-repeat right 16px center;
-  background-size: 10px;
-  transition: border-color .1s ease-in-out,box-shadow .1s ease-in-out;
-  border: 2px solid #ddd;
-  border-radius: 10px;
-}
 
-.dropdown-content:hover {
-  border: 2px solid #999;
-}
-
-.dropdown-content:focus {
-  border: 1px solid #999;
-  box-shadow: 0 3px 5px 0 rgba(0,0,0,.2);
-  outline: none;
-}
-
-select::-ms-expand {
-  display:none;
-}
-
-
-/* .dropdown {
+.dropdown {
 position: relative;
 font-family: 'Roboto', sans-serif;
 font-weight: 500;
@@ -462,7 +426,7 @@ z-index: 1;
 
 .dropdown-content a {
 color: #0C0A1C;
-padding: 10px 12px;
+padding: 10px 12px; /* Adjusted padding */
 text-decoration: none;
 display: block;
 
@@ -470,7 +434,7 @@ display: block;
 
 .dropdown-content a:hover {
 background-color: #ff7200;
-} 
+}
 
 .dropdown:hover .dropdown-content {
 display: block;
@@ -478,7 +442,7 @@ display: block;
 
 .dropdown:hover .dropbtn {
 background-color: #3e8e41;
-} */
+}
 
 .Result{
   background-color: #FFFFFF;
