--- a/templates/test.html
+++ b/templates/test.html
@@ -27,9 +27,9 @@
         </div>
     </nav> 
     <section id="home" class="hero-section">
-        <img src="/static/images/ASSET_HOMEPAGE.png" alt="Hero Image"> 
-        <div class="overlay"></div>
-        <div class="hero-content"></div> 
+        <!-- <img src="/static/images/ASSET_HOMEPAGE.png" alt="Hero Image">  -->
+        <!-- <div class="overlay"></div>
+        <div class="hero-content"></div>  -->
     </section>
 
     <div class="main">
@@ -46,10 +46,10 @@
                         <div class="calculator_nav">
                             <span>Number of Bands</span>
                             <ul class="nav-links">
-                                <button onclick="showBands(3)">3 Bands</button>
-                                <button onclick="showBands(4)">4 Bands</button>
-                                <button onclick="showBands(5)">5 Bands</button>
-                                <button onclick="showBands(6)">6 Bands</button>
+                                <li><button onclick="showBands(3)">3 Bands</button> </li>
+                                <li><button onclick="showBands(4)">4 Bands</button></li>
+                                <li><button onclick="showBands(5)">5 Bands</button></li>
+                                <li><button onclick="showBands(6)">6 Bands</button></li>
                             </ul>
                         </div>
                         <div class="sub_container">
@@ -57,8 +57,8 @@
                             <div id="band1">
                                 <h4> 1st Band of color </h4>
                                 <div class="dropdown">
-                                    <label class="for-dropdown" for="dropdown1">Select a color <i class="uil uil-arrow-down"></i></label>
                                     <select id="band1Select" class="dropdown-content">
+                                        <option value="" selected disabled hidden></option>
                                         <option class="black" value="black">black</option>
                                         <option class="brown" value="brown">brown</option>
                                         <option class="red" value="red">red</option>
@@ -77,7 +77,6 @@
                             <div id="band2">    
                                 <h4> 2nd Band of color </h4>
                                 <div class="dropdown">
-                                <label class="for-dropdown" for="dropdown2">Select a color <i class="uil uil-arrow-down"></i></label>
                                 <select id="band2Select" class="dropdown-content">
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
@@ -97,7 +96,6 @@
                         <div id="band3">
                             <h4> 3rd Band of color </h4>
                             <div class="dropdown">
-                                <label class="for-dropdown" for="dropdown3">Select a color <i class="uil uil-arrow-down"></i></label>
                                 <select id="band3Select" class="dropdown-content">
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
@@ -117,7 +115,6 @@
                         <div id="multiplier">
                             <h4> Multiplier </h4>
                             <div class="dropdown">
-                                <label class="for-dropdown" for="dropdown4">Select a color <i class="uil uil-arrow-down"></i></label>
                                 <select id="band4Select" class="dropdown-content">
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
@@ -136,7 +133,6 @@
                         <div id="tolerance">
                             <h4> Tolerance </h4>
                             <div class="dropdown">
-                                <label class="for-dropdown" for="dropdown5">Select a color <i class="uil uil-arrow-down"></i></label>
                                 <select id="band5Select" class="dropdown-content">
                                     <option class="brown" value="brown">brown</option>
                                     <option class="red" value="red">red</option>
@@ -154,7 +150,6 @@
                             <div id="toleranceCoefficient">
                                 <h4> Tolerance Coefficient</h4>
                                 <div class="dropdown">
-                                    <label class="for-dropdown" for="dropdown6">Select a color <i class="uil uil-arrow-down"></i></label>
                                     <select id="band6Select" class="dropdown-content">
                                         <option class="brown" value="black">black</option>
                                         <option class="red" value="brown">brown</option>
@@ -171,9 +166,8 @@
                             </div>
                                 
                             <h4> Resistance Value </h4>
-                            <!-- temporary -->
                             <div class="rv_result">
-    
+                                <p>Result: </p>
                             </div>
                             <button class="Result" role="button">Result</button>
                         </div>
@@ -308,6 +302,7 @@
             </div>
         </footer>
     </div>
+    
     <script>
         let selectedBands = 3;
         function showBands(numBands) {
@@ -336,6 +331,14 @@
                 document.getElementById('toleranceCoefficient').style.display = 'block';
             }
         }
+
+        // Get labels from dropdowns
+        // var label1 = document.getElementById('d1');
+        // var label2 = document.getElementById('d2');
+        // var label3 = document.getElementById('d3');
+        // var label4 = document.getElementById('d4');
+        // var label5 = document.getElementById('d5');
+        // var label6 = document.getElementById('d6');
 
         // Add event listeners to each dropdown
         document.getElementById('band1Select').addEventListener('change', function() {
@@ -373,40 +376,43 @@
         // });
 
         document.querySelector('.Result').addEventListener('click', function() {
-    var band1 = document.getElementById('band1Select').value;
-    var band2 = document.getElementById('band2Select').value;
-    var band3 = document.getElementById('band3Select').value;
-    var multiplier = document.getElementById('band4Select').value;
-    var tolerance = document.getElementById('band5Select').value;
-    var toleranceCoefficient = document.getElementById('band6Select').value;
-    var data = {
-        bands: [band1, band2, band3, multiplier, tolerance, toleranceCoefficient],
-        num_bands: selectedBands 
-    };
+        var band1 = document.getElementById('band1Select').value;
+        var band2 = document.getElementById('band2Select').value;
+        var band3 = document.getElementById('band3Select').value;
+        var multiplier = document.getElementById('band4Select').value;
+        var tolerance = document.getElementById('band5Select').value;
+        var toleranceCoefficient = document.getElementById('band6Select').value;
+        var data = {
+            bands: [band1, band2, band3, multiplier, tolerance, toleranceCoefficient],
+            num_bands: selectedBands 
+        };
 
-    console.log('Data:', data);
 
-    fetch('/calculate_resistance/' + selectedBands, {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(data)
-    })
-    .then(response => {
-        if (response.ok) {
-            return response.json();
-        } else {
-            throw new Error('Failed to calculate resistance');
-        }
-    })
-    .then(data => {
-        console.log('Resistance:', data.resistance);
-    })
-    .catch(error => {
-        console.error('Error:', error);
+        console.log('Data:', data);
+
+        fetch('/calculate_resistance/' + selectedBands, {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(data)
+        })
+        .then(response => {
+            if (response.ok) {
+                return response.json();
+            } else {
+                throw new Error('Failed to calculate resistance');
+            }
+        })
+        .then(data => {
+            console.log('Resistance:', data.resistance);
+            var resultParagraph = document.querySelector('.rv_result p');
+            resultParagraph.innerHTML = 'Result: <strong>' + data.resistance + '</strong>';
+        })
+        .catch(error => {
+            console.error('Error:', error);
+        });
     });
-});
 
     </script>
     </body>
