--- a/static/style.css
+++ b/static/style.css
@@ -231,6 +231,7 @@ border: 1px solid red;
 }
 
 .container2 {
+  padding-top: 75px;
   width: 85%;
 }
 
@@ -239,18 +240,18 @@ border: 1px solid red;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .calculator {
-  margin-top:75px;
   width: 50%;
   box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.42);
   background-color: #0B0A11;
 }
 
 .resistor {
-  width: 400px;
+  padding-top: 75px;
+  width: 40%;
+  height: 70%;
 }
 
 .calculator_nav {
@@ -403,16 +404,16 @@ padding: 10px 0;
   background: #fff url("select-arrows.svg") no-repeat right 16px center;
   background-size: 10px;
   transition: border-color .1s ease-in-out,box-shadow .1s ease-in-out;
-  border: 2px solid #ddd;
+  border: 2px solid #FDFDFD;
   border-radius: 10px;
 }
 
 .dropdown-content:hover {
-  border: 2px solid #999;
+  border: 2px solid #0B0A11;
 }
 
 .dropdown-content:focus {
-  border: 1px solid #999;
+  border: 1px solid #1B0B03;
   box-shadow: 0 3px 5px 0 rgba(0,0,0,.2);
   outline: none;
 }
