--- a/templates/test.html
+++ b/templates/test.html
@@ -58,7 +58,7 @@
                                 <h4> 1st Band of color </h4>
                                 <div class="dropdown">
                                     <select id="band1Select" class="dropdown-content">
-                                        <option value="" selected disabled hidden></option>
+                                        <option value="black" selected disabled hidden></option>
                                         <option class="black" value="black">black</option>
                                         <option class="brown" value="brown">brown</option>
                                         <option class="red" value="red">red</option>
@@ -78,6 +78,7 @@
                                 <h4> 2nd Band of color </h4>
                                 <div class="dropdown">
                                 <select id="band2Select" class="dropdown-content">
+                                    <option value="black" selected disabled hidden></option>
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
                                     <option class="red" value="red">red</option>
@@ -97,6 +98,7 @@
                             <h4> 3rd Band of color </h4>
                             <div class="dropdown">
                                 <select id="band3Select" class="dropdown-content">
+                                    <option value="black" selected disabled hidden></option>
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
                                     <option class="red" value="red">red</option>
@@ -116,6 +118,7 @@
                             <h4> Multiplier </h4>
                             <div class="dropdown">
                                 <select id="band4Select" class="dropdown-content">
+                                    <option value="black" selected disabled hidden></option>
                                     <option class="black" value="black">black</option>
                                     <option class="brown" value="brown">brown</option>
                                     <option class="red" value="red">red</option>
@@ -134,6 +137,7 @@
                             <h4> Tolerance </h4>
                             <div class="dropdown">
                                 <select id="band5Select" class="dropdown-content">
+                                    <option value="black" selected disabled hidden></option>
                                     <option class="brown" value="brown">brown</option>
                                     <option class="red" value="red">red</option>
                                     <option class="green" value="green">green</option>
@@ -151,6 +155,7 @@
                                 <h4> Tolerance Coefficient</h4>
                                 <div class="dropdown">
                                     <select id="band6Select" class="dropdown-content">
+                                        <option value="black" selected disabled hidden></option>
                                         <option class="brown" value="black">black</option>
                                         <option class="red" value="brown">brown</option>
                                         <option class="green" value="red">red</option>
